<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.colinbell.casino.blackjackActivity">

    <TextView
        android:id="@+id/dealerTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/winner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealerHand"
        app:layout_constraintVertical_bias="0.151"
        tools:text="dealerTotal" />

    <TextView
        android:id="@+id/dealerHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/winner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="dealerHand" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="winner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/playerTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner"
        tools:text="playerTotal"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playerHand"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/playerHand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/deal"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner"
        app:layout_constraintVertical_bias="0.904"
        tools:text="playerHand" />

    <Button
        android:id="@+id/deal"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:onClick="onButtonDeal"
        android:text="@string/deal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="74dp"
        app:layout_constraintHorizontal_bias="0.497" />

    <Button
        android:id="@+id/hit"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:onClick="onButtonHit"
        android:text="@string/hit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:layout_constraintRight_toLeftOf="@+id/stick"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.666" />

    <Button
        android:id="@+id/stick"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:onClick="onButtonStick"
        android:text="@string/stick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/winner"
        tools:text="@string/playerScore"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/dealerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Dealer score"
        app:layout_constraintLeft_toRightOf="@+id/winner"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintVertical_bias="0.407" />

</android.support.constraint.ConstraintLayout>
