<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawhilo"
    tools:context="com.example.colinbell.casino.games.drawHiLoActivity">

    <Button
        android:id="@+id/high"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:onClick="onHiLoClick"
        android:text="@string/hi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        app:layout_constraintRight_toLeftOf="@+id/lo"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/deal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="131dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onClickDeal"
        android:text="@string/hitme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outcome"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/lo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:onClick="onHiLoClick"
        android:text="@string/lo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/playerStreak"
        android:layout_width="41dp"
        android:layout_height="23dp"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="playerStreak"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="win/lose"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.27" />

    <ImageView
        android:id="@+id/cardDisplay"
        android:layout_width="125dp"
        android:layout_height="182dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
        app:srcCompat="@drawable/cardback" />

    <TextView
        android:id="@+id/rankDisplay"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="git "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:text="rankDisplay" />
</android.support.constraint.ConstraintLayout>
